--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -26,6 +26,6 @@ server {
     		fastcgi_param SERVER_PROTOCOL $server_protocol;
     		fastcgi_param REQUEST_URI $request_uri;
 		fastcgi_param QUERY_STRING $query_string;
-                fastcgi_pass calm:9001;
+                fastcgi_pass sera:9001;
 	}
 }
