--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
 #	auth_basic "Unauthorized"; 
 #       auth_basic_user_file /etc/nginx/.htpasswd; # 
-        server_name ha.shushik.net;
+        server_name serenity-net.org;
         root /files;
         location = /favicon.ico {
                 log_not_found off;
