--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: $myroot
+      MYSQL_ROOT_PASSWORD: $MYROOT
     volumes:
     - /opt/serotonin/mysql:/var/lib/mysql
 
